--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+        "canvas": "^2.11.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
